updating nginx.conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,7 @@ upstream puma {
 }
 
 server {
-  listen 80 default_server deferred;
+  listen 80 deferred;
   server_name teencars.omundu.com carsforteens.omundu.com cars-for-teens.omundu.com;
 
   root /var/www/cars_for_teens/current/public;
