--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,6 +16,12 @@ server {
     add_header Cache-Control public;
   }
 
+  location ^~ /public/ {
+    gzip_static on;
+    expires max;
+    add_header Cache-Control public;
+  }
+  
   try_files $uri/index.html $uri @puma;
   location @puma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
