--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,7 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
+  host: localhost
   username: <%= ENV['PG_DB_USER'] %>
   password: <%= ENV['PG_DB_PASS'] %>
 
